attempt to fix flicker on idle refresh

--- a/client/stylesheets/desktop.less
+++ b/client/stylesheets/desktop.less
@@ -142,12 +142,20 @@
 
 /* ----------- */
 
+html,
+body {
+  height: 100%;
+  max-height: 100%;
+}
+
 .page-container {
   position: fixed;
   top: 0;
   left: 0;
-  min-height: 100%;
-  min-width: 100%;
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  max-width: 100%;
   -webkit-box-orient: horizontal;
   .flex-flow;
   .displayFlex;
@@ -190,25 +198,37 @@
 .chatroom {
   .displayFlex;
   .flex-flow;
-  .flex(1 0)
+  .flex(1 0);
+  max-height: 100%;
 }
 
 .transcript {
   .flex(6);
   .displayFlex;
   .flex-flow(column);
+  max-height: 100%;
 
-  .messages {
+  .messages-container {
     .flex(1 0);
     .order(1);
     .flex-flow;
+    position: relative;
+  }
+  .messages {
+
+  bottom: 0;
+  left: 0;
+  overflow: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
     overflow: auto;
     margin: 5px 0 0;
     padding: 0;
     border: 1px solid #ddd;
     .rounded(5px);
     .drop-shadow(0, 2px, 2px, 0.2);
-    height: 50px;
+    max-height: 100%;
 
     .message {
         list-style: none;
@@ -222,7 +242,7 @@
             /* TODO fix this */
         }
         &.unread {
-          background: #ffc;
+          // background: #ffc;
         }
         &.user {
             background: #f5f5f5;
@@ -235,10 +255,8 @@
 
   .chatInputForm {
     .displayFlex;
-    .flex(3em auto);
+    .flex(3em 0);
     .order(2);
-    width: 100%;
-    height: 3em;
     margin: .5em 0 0;
   }
     .chatInputBox {
